feat: add header desktop

--- a/#src/scss/fonts.scss
+++ b/#src/scss/fonts.scss
@@ -1,4 +1,7 @@
-// @include font("DMSerifDisplay", "DMSerifDisplay-Regular", "400", "normal");
+ @include font("Gotham", "Gotham-Book", "400", "normal");
+ @include font("Gotham", "Gotham-Bold", "700", "normal");
+ @include font("Kamerik", "Kamerik105", "400", "normal");
+ @include font("Kamerik", "Kamerik105Bold", "700", "normal");
 
 
 
