--- a/#src/scss/variables.scss
+++ b/#src/scss/variables.scss
@@ -1,2 +1,9 @@
-$fontfamily:"Lato", sans-serif;
+$fontfamily:"Gotham", sans-serif;
 $minwidth:320px;
+
+//colors
+$col-dark-navy: #24336A;
+$col-orange: #E88645;
+$col-white: #fff;
+$col-light-blue: #F6FAFE;
+$col-grey: #E3E3E3;
