--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,35 @@
+@font-face {
+  font-family: "Gotham";
+  font-display: swap;
+  src: url("../fonts/Gotham-Book.woff") format("woff"), url("../fonts/Gotham-Book.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gotham";
+  font-display: swap;
+  src: url("../fonts/Gotham-Bold.woff") format("woff"), url("../fonts/Gotham-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Kamerik";
+  font-display: swap;
+  src: url("../fonts/Kamerik105.woff") format("woff"), url("../fonts/Kamerik105.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Kamerik";
+  font-display: swap;
+  src: url("../fonts/Kamerik105Bold.woff") format("woff"), url("../fonts/Kamerik105Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
 * {
   padding: 0px;
   margin: 0px;
@@ -38,7 +70,7 @@ body {
 body {
   line-height: 1;
   font-size: 14px;
-  font-family: "Lato", sans-serif;
+  font-family: "Gotham", sans-serif;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -47,7 +79,7 @@ body {
 input,
 button,
 textarea {
-  font-family: "Lato", sans-serif;
+  font-family: "Gotham", sans-serif;
 }
 
 input::-ms-clear {
@@ -96,19 +128,11 @@ h6 {
 }
 
 .container {
-  max-width: 1313px;
+  max-width: 1312px;
   padding: 0px 15px;
   margin: 0px auto;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
-}
-
-.hide {
-  background-color: #F5F5F5;
-}
-
-.root {
-  padding: 96px 0 0 0;
 }
 
 .page {
@@ -116,8 +140,167 @@ h6 {
   z-index: 2;
 }
 
-@media (max-width: 1023px) {
-  .root {
-    padding: 39px 0 0 0;
+.link-style {
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  font-weight: 700;
+  color: #24336A;
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
+  transition: 300ms;
+}
+
+.link-style a {
+  color: #24336A;
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
+  transition: 300ms;
+}
+
+.btn-cta {
+  font-family: "Kamerik";
+  font-size: 14px;
+  line-height: 14px;
+  padding: 14px 30px;
+  border-radius: 100px;
+  font-weight: 700;
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
+  transition: 300ms;
+}
+
+.btn-cta._orange {
+  color: #fff;
+  background-color: #E88645;
+  border: 2px solid #E88645;
+}
+
+.header__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 33px 0;
+}
+
+.header__content_navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+          flex: 0 1 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.header__content_navigation .navigation__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__content_navigation .navigation__list_link {
+  margin: 0 0 0 64px;
+  padding: 14px 0;
+}
+
+.header__content_navigation .navigation__list_link.submenu {
+  position: relative;
+  padding: 14px 19px 14px 0;
+}
+
+.header__content_navigation .navigation__list_link.submenu svg {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 1px;
+  width: 16px;
+  height: 16px;
+  fill: #24336A;
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
+  transition: 300ms;
+}
+
+.header__content_navigation .navigation__cta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 0 0 23px;
+}
+
+.header__content_navigation .navigation__cta_link {
+  position: relative;
+  padding: 14px 40px;
+}
+
+.header__content_navigation .navigation__cta_link.ico-svg {
+  padding: 14px 40px 14px 23px;
+  margin: 0 0 0 40px;
+}
+
+.header__content_navigation .navigation__cta_link.ico-svg:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 16px;
+  height: 16px;
+  background-size: 16px 16px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("../img/phone.svg");
+}
+
+.header__content_navigation .navigation__cta_link:before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 1px;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  height: 17px;
+  background-color: #E3E3E3;
+}
+
+.header__content_navigation .navigation__cta .btn-cta {
+  margin: 0 0 0 37px;
+}
+
+@media (min-width: 1200px) {
+  .link-style:hover {
+    color: #E88645;
+  }
+
+  .link-style:hover a {
+    color: #E88645;
+  }
+
+  .link-style:hover.submenu svg {
+    fill: #E88645;
+  }
+
+  .btn-cta._orange:hover {
+    color: #E88645;
+    background-color: #fff;
   }
 }
