--- a/#src/scss/variables.scss
+++ b/#src/scss/variables.scss
@@ -5,5 +5,6 @@ $minwidth:320px;
 $col-dark-navy: #24336A;
 $col-orange: #E88645;
 $col-white: #fff;
+$col-white-dark: #FBFDFF;
 $col-light-blue: #F6FAFE;
 $col-grey: #E3E3E3;
