--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -163,7 +163,7 @@ h6 {
   font-family: "Kamerik";
   font-size: 14px;
   line-height: 14px;
-  padding: 14px 30px;
+  padding: 12px 30px;
   border-radius: 100px;
   font-weight: 700;
   -webkit-transition: 300ms;
@@ -184,7 +184,7 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 33px 0;
+  padding: 18px 0;
 }
 
 .header__content_navigation {
@@ -200,6 +200,7 @@ h6 {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  padding: 18px 0 0 0;
 }
 
 .header__content_navigation .navigation__list {
@@ -210,17 +211,17 @@ h6 {
 
 .header__content_navigation .navigation__list_link {
   margin: 0 0 0 64px;
-  padding: 14px 0;
+  padding: 14px 0 32px;
 }
 
 .header__content_navigation .navigation__list_link.submenu {
   position: relative;
-  padding: 14px 19px 14px 0;
+  padding: 14px 19px 32px 0;
 }
 
 .header__content_navigation .navigation__list_link.submenu svg {
   position: absolute;
-  top: 50%;
+  top: calc(50% - 9px);
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -233,30 +234,128 @@ h6 {
   transition: 300ms;
 }
 
-.header__content_navigation .navigation__cta {
+.header__content_navigation .navigation__list_link .dropdown-menu {
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  top: 59px;
+  left: 1px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #FBFDFF;
+  border-radius: 10px;
+  -webkit-box-shadow: 11px 1px 49px rgba(0, 0, 0, 0.1);
+          box-shadow: 11px 1px 49px rgba(0, 0, 0, 0.1);
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
+  transition: 300ms;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu:before {
+  content: "";
+  position: absolute;
+  top: -13px;
+  left: 14px;
+  border-style: solid;
+  border-width: 0 20px 30px 20px;
+  border-color: transparent transparent #fbfdff transparent;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu li {
+  font-family: "Kamerik";
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 700;
+  color: #24336A;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu li a {
+  color: #24336A;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li {
+  padding: 39px;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:first-child {
+  width: 346px;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:first-child li {
+  margin: 0 0 24px 0;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:first-child li:last-child {
+  margin: 0;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:first-child li > a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:first-child li > a span {
+  width: 32px;
+  height: 32px;
+  margin: 0 12px 0 0;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:first-child li > a span img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:last-child {
+  background-color: #F6FAFE;
+  width: 257px;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:last-child li {
+  margin: 0 0 18px 0;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:last-child li:last-child {
+  margin: 0;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:last-child strong {
+  display: block;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: 700;
+  color: #E88645;
+  margin: 3px 0 16px;
+}
+
+.header__content_navigation .navigation__cta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin: 0 0 0 23px;
 }
 
 .header__content_navigation .navigation__cta_link {
   position: relative;
-  padding: 14px 40px;
+  padding: 14px 40px 32px;
 }
 
 .header__content_navigation .navigation__cta_link.ico-svg {
-  padding: 14px 40px 14px 23px;
+  padding: 14px 40px 32px 23px;
   margin: 0 0 0 40px;
 }
 
 .header__content_navigation .navigation__cta_link.ico-svg:after {
   content: "";
   position: absolute;
-  top: 50%;
+  top: calc(50% - 9px);
   left: 0;
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
@@ -273,7 +372,7 @@ h6 {
   content: "";
   position: absolute;
   right: 0;
-  top: 50%;
+  top: calc(50% - 9px);
   width: 1px;
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
@@ -283,6 +382,8 @@ h6 {
 }
 
 .header__content_navigation .navigation__cta .btn-cta {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   margin: 0 0 0 37px;
 }
 
@@ -302,5 +403,10 @@ h6 {
   .btn-cta._orange:hover {
     color: #E88645;
     background-color: #fff;
+  }
+
+  .header__content_navigation .navigation__list_link.submenu:hover .dropdown-menu {
+    opacity: 1;
+    pointer-events: initial;
   }
 }
