--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -48,7 +48,7 @@
               pointer-events: none;
               position: absolute;
               top: 59px;
-              left: 1px;
+              left: -15px;
               display: flex;
               background-color: $col-white-dark;
               border-radius: 10px;
@@ -91,7 +91,7 @@
 
               > li {
                 padding: 39px;
-                width: 346px;
+                width: 327px;
 
                 &:first-child {
 
@@ -117,6 +117,16 @@
                           object-fit: contain;
                         }
                       }
+                      p{
+                        small{
+                          display: block;
+                          text-transform: capitalize;
+                          margin: 8px 0 0 0;
+                          font-size: 12px;
+                          line-height: 14px;
+                          font-weight: 400;
+                        }
+                      }
                     }
                   }
                 }
@@ -126,10 +136,28 @@
                   width: 257px;
 
                   li {
-                    margin: 0 0 18px 0;
-
+                    margin: 0 0 20px 0;
+                    font-weight: 400;
                     &:last-child {
                       margin: 0;
+                    }
+                  }
+
+                  >a{
+                    display: inline-block;
+                    color: $col-grey-dark;
+                    font-size: 14px;
+                    line-height: 21px;
+                    font-weight: 400;
+                    margin: 24px 0 0 0;
+                    border-bottom: 1px solid $col-grey-dark;
+                    transition: 300ms;
+                    @media (min-width: 1200px) {
+                      &:hover{
+                        opacity: .5;
+                        border-bottom: 1px solid rgba($col-grey-dark, 0.5);
+
+                      }
                     }
                   }
 
