--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -239,7 +239,7 @@ h6 {
   pointer-events: none;
   position: absolute;
   top: 59px;
-  left: 1px;
+  left: -15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -282,7 +282,7 @@ h6 {
 
 .header__content_navigation .navigation__list_link .dropdown-menu > li {
   padding: 39px;
-  width: 346px;
+  width: 327px;
 }
 
 .header__content_navigation .navigation__list_link .dropdown-menu > li:first-child li {
@@ -315,17 +315,40 @@ h6 {
      object-fit: contain;
 }
 
+.header__content_navigation .navigation__list_link .dropdown-menu > li:first-child li > a p small {
+  display: block;
+  text-transform: capitalize;
+  margin: 8px 0 0 0;
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 400;
+}
+
 .header__content_navigation .navigation__list_link .dropdown-menu > li:nth-child(2) {
   background-color: #F6FAFE;
   width: 257px;
 }
 
 .header__content_navigation .navigation__list_link .dropdown-menu > li:nth-child(2) li {
-  margin: 0 0 18px 0;
+  margin: 0 0 20px 0;
+  font-weight: 400;
 }
 
 .header__content_navigation .navigation__list_link .dropdown-menu > li:nth-child(2) li:last-child {
   margin: 0;
+}
+
+.header__content_navigation .navigation__list_link .dropdown-menu > li:nth-child(2) > a {
+  display: inline-block;
+  color: #A6B9CE;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  margin: 24px 0 0 0;
+  border-bottom: 1px solid #A6B9CE;
+  -webkit-transition: 300ms;
+  -o-transition: 300ms;
+  transition: 300ms;
 }
 
 .header__content_navigation .navigation__list_link .dropdown-menu > li:nth-child(2) strong {
@@ -419,5 +442,10 @@ h6 {
 
   .header__content_navigation .navigation__list_link .dropdown-menu li li:hover a {
     color: #E88645;
+  }
+
+  .header__content_navigation .navigation__list_link .dropdown-menu > li:nth-child(2) > a:hover {
+    opacity: 0.5;
+    border-bottom: 1px solid rgba(166, 185, 206, 0.5);
   }
 }
