--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -129,7 +129,7 @@ h6 {
 
 .container {
   max-width: 1312px;
-  padding: 0px 15px;
+  padding: 0px 24px;
   margin: 0px auto;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
@@ -413,6 +413,45 @@ h6 {
   margin: 0 0 0 37px;
 }
 
+.header__content_burger {
+  display: none;
+  position: relative;
+  padding: 13px 10px;
+  width: 20px;
+  height: 14px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  border-radius: 50%;
+  background-color: #E88645;
+}
+
+.header__content_burger span {
+  position: absolute;
+  width: 20px;
+  height: 2px;
+  background-color: #fff;
+  left: 10px;
+  border-radius: 1px;
+}
+
+.header__content_burger span:nth-child(1) {
+  top: 13px;
+}
+
+.header__content_burger span:nth-child(2) {
+  left: 16px;
+  width: 13px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.header__content_burger span:nth-child(3) {
+  top: initial;
+  bottom: 13px;
+}
+
 @media (min-width: 1200px) {
   .link-style:hover {
     color: #E88645;
@@ -447,5 +486,125 @@ h6 {
   .header__content_navigation .navigation__list_link .dropdown-menu > li:nth-child(2) > a:hover {
     opacity: 0.5;
     border-bottom: 1px solid rgba(166, 185, 206, 0.5);
+  }
+}
+
+@media (max-width: 1439px) {
+  .header__content_navigation .navigation__list_link {
+    margin: 0 0 0 43px;
+  }
+
+  .header__content_navigation .navigation__cta_link {
+    padding: 14px 20px 32px;
+  }
+
+  .header__content_navigation .navigation__cta_link.ico-svg {
+    margin: 0 0 0 20px;
+    padding: 14px 20px 32px 23px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .header .link-style {
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  .header__content {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+
+  .header__content_burger {
+    display: block;
+  }
+
+  .header__content_navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: initial;
+        -ms-flex-pack: initial;
+            justify-content: initial;
+    padding: 128px 24px 190px;
+    -webkit-box-flex: initial;
+        -ms-flex: initial;
+            flex: initial;
+    max-height: 100%;
+    overflow-y: auto;
+  }
+
+  .header__content_navigation .navigation__list {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .header__content_navigation .navigation__list_link {
+    margin: 0 0 24px 0;
+    padding: 0;
+  }
+
+  .header__content_navigation .navigation__list_link.submenu {
+    padding: 0 24px 0 0;
+  }
+
+  .header__content_navigation .navigation__list_link.submenu svg {
+    width: 24px;
+    height: 24px;
+  }
+
+  .header__content_navigation .navigation__cta {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0;
+  }
+
+  .header__content_navigation .navigation__cta_link {
+    padding: 0;
+  }
+
+  .header__content_navigation .navigation__cta_link:first-child {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+
+  .header__content_navigation .navigation__cta_link:first-child:before {
+    display: none;
+  }
+
+  .header__content_navigation .navigation__cta_link.ico-svg {
+    border-top: 1px solid #E3E3E3;
+    border-bottom: 1px solid #E3E3E3;
+    padding: 32px 0 32px 30px;
+    margin: 0 0 32px 0;
+  }
+
+  .header__content_navigation .navigation__cta_link.ico-svg:after {
+    width: 24px;
+    height: 24px;
+    background-size: 24px 24px;
+    top: 50%;
+  }
+
+  .header__content_navigation .navigation__cta_link.ico-svg:before {
+    display: none;
+  }
+
+  .header__content_navigation .navigation__cta .btn-cta {
+    margin: 0;
   }
 }
