feat: add menu mob. -1

--- a/#src/scss/common.scss
+++ b/#src/scss/common.scss
@@ -10,12 +10,12 @@
   box-sizing: content-box;
 }
 
-//.root {
-//  padding: 96px 0 0 0;
-//  @media(max-width: 1023px) {
-//    padding: 39px 0 0 0;
-//  }
-//}
+.root {
+  padding: 114px 0 0 0;
+  //@media(max-width: 1023px) {
+  //  padding: 39px 0 0 0;
+  //}
+}
 
 .page {
   position: relative;
