--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,4 +1,10 @@
 .header {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  background-color: $col-white;
   &__content {
     display: flex;
     align-items: center;
@@ -10,7 +16,7 @@
       flex: 0 1 100%;
       justify-content: flex-end;
       padding: 18px 0 0 0;
-
+      transition: 500ms;
       .navigation {
         &__list {
           display: flex;
@@ -218,11 +224,23 @@
               height: 17px;
               background-color: $col-grey;
             }
+
+            span{
+              display: none;
+              font-size: 16px;
+              line-height: 16px;
+              font-weight: 400;
+            }
           }
 
           .btn-cta {
             align-self: flex-start;
             margin: 0 0 0 37px;
+            span{
+              &:nth-child(2){
+                display: none;
+              }
+            }
           }
         }
 
@@ -244,6 +262,7 @@
         background-color: $col-white;
         left: 10px;
         border-radius: 1px;
+        transition: 500ms;
         &:nth-child(1){
           top: 13px;
         }
@@ -257,6 +276,15 @@
           top: initial;
           bottom: 13px;
         }
+      }
+    }
+    &_logo{
+      flex: 0 0 161px;
+      height: 33px;
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
     }
 
@@ -290,14 +318,59 @@
 
 @media (max-width: 1199px) {
   .header{
+    &.active{
+      .header{
+        &__content{
+          &_navigation{
+            transform: initial;
+          }
+          &_burger{
+            span{
+              &:nth-child(1){
+                top: 50%;
+                transform: translateY(-50%) rotate(-45deg);
+              }
+              &:nth-child(2){
+                left: -10px;
+                opacity: 0;
+              }
+              &:nth-child(3){
+                bottom: 50%;
+                transform: translateY(50%) rotate(45deg);
+              }
+            }
+          }
+        }
+      }
+    }
     .link-style{
       font-size: 28px;
       line-height: 36px;
     }
     &__content{
       justify-content: space-between;
+      padding: 22px 0;
+      position: relative;
+      &:before{
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 84px;
+        background-color: $col-light-blue;
+        box-shadow: 0px 1px 25px rgb(0 51 117 / 10%);
+        z-index: 2;
+      }
       &_burger{
         display: block;
+        z-index: 3;
+      }
+      &_logo{
+        position: relative;
+        z-index: 3;
+        flex: 0 0 144px;
+        height: 29px;
       }
       &_navigation{
         position: fixed;
@@ -307,14 +380,17 @@
         height: 100vh;
         flex-direction: column;
         justify-content: initial;
-        padding: 128px 24px 190px;
+        padding: 128px 24px 128px;
         flex: initial;
         max-height: 100%;
         overflow-y: auto;
+        background-color: $col-light-blue;
+        transform: translateY(-100vh);
         .navigation{
           &__list{
             width: 100%;
             flex-direction: column;
+            margin: 0 0 8px 0;
             &_link{
               margin: 0 0 24px 0;
               padding: 0;
@@ -322,6 +398,7 @@
                 padding: 0 24px 0 0;
 
                 svg{
+                  top: 50%;
                   width: 24px;
                   height: 24px;
                 }
@@ -336,15 +413,26 @@
               padding: 0;
               &:first-child{
                 order: 3;
+                margin: 8px 0 0 0;
+                text-align: center;
                 &:before{
                   display: none;
+                }
+                span{
+                  display: inline-block;
+                }
+                a{
+                  font-size: 16px;
+                  line-height: 16px;
+                  color: $col-orange;
+                  border-bottom: 1px solid $col-orange;
                 }
               }
               &.ico-svg{
                 border-top: 1px solid $col-grey;
                 border-bottom: 1px solid $col-grey;
                 padding: 32px 0 32px 30px;
-                margin: 0 0 32px 0;
+                margin: 0 0 28px 0;
                 &:after{
                   width: 24px;
                   height: 24px;
@@ -358,6 +446,30 @@
             }
             .btn-cta{
               margin: 0;
+              padding: 22px 102px;
+              align-self: center;
+              span{
+                display: none;
+                &:nth-child(2){
+                  display: block;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 359px) {
+  .header{
+    &__content{
+      &_navigation{
+        .navigation{
+          &__cta{
+            .btn-cta{
+              padding: 20px 80px;
             }
           }
         }
