--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -135,6 +135,10 @@ h6 {
           box-sizing: content-box;
 }
 
+.root {
+  padding: 114px 0 0 0;
+}
+
 .page {
   position: relative;
   z-index: 2;
@@ -177,6 +181,15 @@ h6 {
   border: 2px solid #E88645;
 }
 
+.header {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  background-color: #fff;
+}
+
 .header__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -201,6 +214,9 @@ h6 {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding: 18px 0 0 0;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms;
 }
 
 .header__content_navigation .navigation__list {
@@ -407,10 +423,21 @@ h6 {
   background-color: #E3E3E3;
 }
 
+.header__content_navigation .navigation__cta_link span {
+  display: none;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+}
+
 .header__content_navigation .navigation__cta .btn-cta {
   -ms-flex-item-align: start;
       align-self: flex-start;
   margin: 0 0 0 37px;
+}
+
+.header__content_navigation .navigation__cta .btn-cta span:nth-child(2) {
+  display: none;
 }
 
 .header__content_burger {
@@ -432,6 +459,9 @@ h6 {
   background-color: #fff;
   left: 10px;
   border-radius: 1px;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms;
 }
 
 .header__content_burger span:nth-child(1) {
@@ -450,6 +480,20 @@ h6 {
 .header__content_burger span:nth-child(3) {
   top: initial;
   bottom: 13px;
+}
+
+.header__content_logo {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 161px;
+          flex: 0 0 161px;
+  height: 33px;
+}
+
+.header__content_logo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 @media (min-width: 1200px) {
@@ -505,6 +549,31 @@ h6 {
 }
 
 @media (max-width: 1199px) {
+  .header.active .header__content_navigation {
+    -webkit-transform: initial;
+        -ms-transform: initial;
+            transform: initial;
+  }
+
+  .header.active .header__content_burger span:nth-child(1) {
+    top: 50%;
+    -webkit-transform: translateY(-50%) rotate(-45deg);
+        -ms-transform: translateY(-50%) rotate(-45deg);
+            transform: translateY(-50%) rotate(-45deg);
+  }
+
+  .header.active .header__content_burger span:nth-child(2) {
+    left: -10px;
+    opacity: 0;
+  }
+
+  .header.active .header__content_burger span:nth-child(3) {
+    bottom: 50%;
+    -webkit-transform: translateY(50%) rotate(45deg);
+        -ms-transform: translateY(50%) rotate(45deg);
+            transform: translateY(50%) rotate(45deg);
+  }
+
   .header .link-style {
     font-size: 28px;
     line-height: 36px;
@@ -514,10 +583,35 @@ h6 {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding: 22px 0;
+    position: relative;
+  }
+
+  .header__content:before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 84px;
+    background-color: #F6FAFE;
+    -webkit-box-shadow: 0px 1px 25px rgba(0, 51, 117, 0.1);
+            box-shadow: 0px 1px 25px rgba(0, 51, 117, 0.1);
+    z-index: 2;
   }
 
   .header__content_burger {
     display: block;
+    z-index: 3;
+  }
+
+  .header__content_logo {
+    position: relative;
+    z-index: 3;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 144px;
+            flex: 0 0 144px;
+    height: 29px;
   }
 
   .header__content_navigation {
@@ -533,12 +627,16 @@ h6 {
     -webkit-box-pack: initial;
         -ms-flex-pack: initial;
             justify-content: initial;
-    padding: 128px 24px 190px;
+    padding: 128px 24px 128px;
     -webkit-box-flex: initial;
         -ms-flex: initial;
             flex: initial;
     max-height: 100%;
     overflow-y: auto;
+    background-color: #F6FAFE;
+    -webkit-transform: translateY(-100vh);
+        -ms-transform: translateY(-100vh);
+            transform: translateY(-100vh);
   }
 
   .header__content_navigation .navigation__list {
@@ -547,6 +645,7 @@ h6 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin: 0 0 8px 0;
   }
 
   .header__content_navigation .navigation__list_link {
@@ -559,6 +658,7 @@ h6 {
   }
 
   .header__content_navigation .navigation__list_link.submenu svg {
+    top: 50%;
     width: 24px;
     height: 24px;
   }
@@ -580,17 +680,30 @@ h6 {
     -webkit-box-ordinal-group: 4;
         -ms-flex-order: 3;
             order: 3;
+    margin: 8px 0 0 0;
+    text-align: center;
   }
 
   .header__content_navigation .navigation__cta_link:first-child:before {
     display: none;
   }
 
+  .header__content_navigation .navigation__cta_link:first-child span {
+    display: inline-block;
+  }
+
+  .header__content_navigation .navigation__cta_link:first-child a {
+    font-size: 16px;
+    line-height: 16px;
+    color: #E88645;
+    border-bottom: 1px solid #E88645;
+  }
+
   .header__content_navigation .navigation__cta_link.ico-svg {
     border-top: 1px solid #E3E3E3;
     border-bottom: 1px solid #E3E3E3;
     padding: 32px 0 32px 30px;
-    margin: 0 0 32px 0;
+    margin: 0 0 28px 0;
   }
 
   .header__content_navigation .navigation__cta_link.ico-svg:after {
@@ -606,5 +719,22 @@ h6 {
 
   .header__content_navigation .navigation__cta .btn-cta {
     margin: 0;
+    padding: 22px 102px;
+    -ms-flex-item-align: center;
+        align-self: center;
+  }
+
+  .header__content_navigation .navigation__cta .btn-cta span {
+    display: none;
+  }
+
+  .header__content_navigation .navigation__cta .btn-cta span:nth-child(2) {
+    display: block;
+  }
+}
+
+@media (max-width: 359px) {
+  .header__content_navigation .navigation__cta .btn-cta {
+    padding: 20px 80px;
   }
 }
