--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -427,10 +427,11 @@
 
               > a {
                 display: block;
+                padding: 0 24px 0 0;
               }
 
               &.submenu {
-                padding: 0 24px 0 0;
+                padding: 0;
 
                 svg {
                   top: 17px;
@@ -454,6 +455,7 @@
                   flex-direction: column;
                   max-height: 0px;
                   overflow: hidden;
+                  border-radius: initial;
                   transition: 500ms;
 
                   > li {
