--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -373,7 +373,7 @@ h6 {
   line-height: 21px;
   font-weight: 400;
   margin: 24px 0 0 0;
-  border-bottom: 1px solid #A6B9CE;
+  border-bottom: 1px solid #a6b9ce;
   -webkit-transition: 300ms;
   -o-transition: 300ms;
   transition: 300ms;
